--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,8 @@ body {
     font-weight: 100;
     font-size: 90px;
      margin-bottom: -60px;
+     text-shadow: 1px 1px 3px #666666,
+  -1px -1px 3px #FFFFFF;
 }
 /* header-title */
 
@@ -87,15 +89,16 @@ body {
     -webkit-appearance: none;
 }
 
-.roster-header-btn:checked:before {
-    color: #737373;
-}
-
 .roster-header-btn::before {
     content: "❯";
     font-size: 25px;
     padding: 10px;
     color: rgb(230, 230, 230);
+}
+
+.activebutton::before {
+    content: "❯";
+    color: #737373;
 }
 
 .roster-header-question {
@@ -145,18 +148,17 @@ body {
    position: relative;
    color: #6dc9b9;
    border-color: #cde3df;
-   font-size: 27px;
+   font-size: 25px;
+	 transition: transform 0.2s, opacity 0.2s;
   }
+
 .checkboxremove:checked +.checkbox > .tick{
   opacity: 1;
 }
-.item{
-margin-left: 45px;
-display: block;
-padding: 12px 60px 12px 12px;
-transition: all 1.5s ease-in-out;
+.checkboxremove:checked +.checkbox {
+border-color: #66CDAA;
 }
-.checkboxremove:checked ~ label.item{
+.checkboxremove:checked ~ .item{
   text-decoration: line-through;
   color: #bdc3c7;
   transition: all 1.5s ease-in-out;
@@ -166,6 +168,17 @@ transition: all 1.5s ease-in-out;
   position: absolute;
   width: 0;
   height: 0;
+}
+
+.item{
+margin-left: 45px;
+display: block;
+padding: 12px 60px 12px 12px;
+transition: all 1.5s ease-in-out;
+}
+.tasks .item.edit {
+    color: #000;
+    text-decoration: none;
 }
 .item-close {
     position: absolute;
@@ -190,6 +203,7 @@ color: #c0392b;
 transition: all 1.5s;
 opacity: 1;
 }
+
 .edit{
 position: relative;
 display: block;
@@ -201,6 +215,8 @@ background-color: white;
 z-index: 2;
 transition: all 1s ease-in-out;
 }
+
+
 /* to do-list */
 
 
@@ -240,8 +256,9 @@ transition: all 1s ease-in-out;
     cursor: pointer;
 }
 
-.footer-link.active {
+.footer-link.active,.footer-link:hover {
     border-color: #ead7d8;
+    transition: all 0.3s ease;
 }
 .footer-btn:focus{
   text-decoration:underline;
@@ -251,17 +268,21 @@ transition: all 1s ease-in-out;
 /* Snackbar */
 h2{
 min-width: 250px;
-margin-left: -125px;
+margin-left: -170px;
  background-color:rgba(51, 51, 51, 0.7);
 text-align: center;
-color: #fff;
+color: #F0F8FF;
 padding: 16px;
 font-weight: 300;
 position: fixed;
 z-index: 1;
 left: 50%;
 bottom: 30px;
-font-size: 20px;
+font-size: 18px;
 box-shadow: 0px 2px 6px rgba(0, 0, 0, 1);
 border-radius: 3px;
+}
+.Snackbar-error{
+  color:#9b2d30;
+  font-size: 19px;
 }
