the final version(add comments,fixed error/save/)

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
-*:focus{
-  outline:none ;
+
+*:focus {
+    outline: none;
 }
+
 .cf:before, .cf:after {
     content: "";
     display: table;
@@ -16,40 +18,65 @@
 html {
     min-height: 100%;
     min-width: 700px;
-  }
+}
 
 body {
     font-family: 'Roboto', sans-serif;
     background: linear-gradient(-20deg, #d0b782 20%, #a0cecf 80%);
 }
 
-  ::-webkit-input-placeholder { color:#d9d9d9; font-family: Roboto;font-weight: 100;}
-  ::-moz-placeholder { color:#d9d9d9; font-family: Roboto;font-weight: 100;}
-  :-ms-input-placeholder { color:#d9d9d9; font-family: Roboto;font-weight: 100;}
-  :-moz-placeholder { color:#d9d9d9; font-family: Roboto;font-weight: 100;}
+ ::-webkit-input-placeholder {
+    color: #d9d9d9;
+    font-family: Roboto;
+    font-weight: 100;
+}
+
+ ::-moz-placeholder {
+    color: #d9d9d9;
+    font-family: Roboto;
+    font-weight: 100;
+}
+
+ :-ms-input-placeholder {
+    color: #d9d9d9;
+    font-family: Roboto;
+    font-weight: 100;
+}
+
+ :-moz-placeholder {
+    color: #d9d9d9;
+    font-family: Roboto;
+    font-weight: 100;
+}
+
 
 /* false-pages */
-  .wrapper:before{
+
+.wrapper:before {
     bottom: -5px;
     left: 2px;
     right: 2px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-    }
-    .wrapper:after{
+}
+
+.wrapper:after {
     bottom: -9px;
-      left: 6px;
-      right: 6px;
-      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
-    }
-    .wrapper:before, .wrapper:after {
-      content: '';
-      position: absolute;
-      height: 3px;
-      background: white;
-      border: 1px solid #ccc;
-      border-radius: 2px;
-  }
-  /* false-pages */
+    left: 6px;
+    right: 6px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+}
+
+.wrapper:before, .wrapper:after {
+    content: '';
+    position: absolute;
+    height: 3px;
+    background: white;
+    border: 1px solid #ccc;
+    border-radius: 2px;
+}
+
+
+/* false-pages */
 
 
 /* header-title */
@@ -59,11 +86,13 @@ body {
     color: #ead7d8;
     font-weight: 100;
     font-size: 90px;
-     margin-bottom: -60px;
-     text-shadow: 1px 1px 3px #666666,
-  -1px -1px 3px #FFFFFF;
+    margin-bottom: -60px;
+    text-shadow: 1px 1px 3px #666666, -1px -1px 3px #FFFFFF;
 }
+
+
 /* header-title */
+
 
 /* to do-list */
 
@@ -75,7 +104,7 @@ body {
     position: relative;
 }
 
-.roster-header-note{
+.roster-header-note {
     border-bottom: 1px solid #e6e6e6;
 }
 
@@ -120,18 +149,18 @@ body {
     border: 1px solid #ededed;
 }
 
-.view{
-  font-size: 23px;
-      font-weight:300;
-      cursor: pointer;
-      border-bottom: 1px solid #ededed;
-      position: relative;
-      margin: 0 auto;
+.view {
+    font-size: 23px;
+    font-weight: 300;
+    cursor: pointer;
+    border-bottom: 1px solid #ededed;
+    position: relative;
+    margin: 0 auto;
 }
 
-.checkbox{
-  position: absolute;
-  cursor: pointer;
+.checkbox {
+    position: absolute;
+    cursor: pointer;
     top: 0;
     bottom: 0;
     left: 9px;
@@ -143,77 +172,84 @@ body {
     border-radius: 50%;
     text-align: center;
 }
- .tick {
-   opacity: 0;
-   position: relative;
-   color: #6dc9b9;
-   border-color: #cde3df;
-   font-size: 25px;
-	 transition: transform 0.2s, opacity 0.2s;
-  }
 
-.checkboxremove:checked +.checkbox > .tick{
-  opacity: 1;
-}
-.checkboxremove:checked +.checkbox {
-border-color: #66CDAA;
-}
-.checkboxremove:checked ~ .item{
-  text-decoration: line-through;
-  color: #bdc3c7;
-  transition: all 1.5s ease-in-out;
-}
-.checkboxremove{
-  opacity: 0;
-  position: absolute;
-  width: 0;
-  height: 0;
+.tick {
+    opacity: 0;
+    position: relative;
+    color: #6dc9b9;
+    border-color: #cde3df;
+    font-size: 25px;
+    transition: transform 0.2s, opacity 0.2s;
 }
 
-.item{
-margin-left: 45px;
-display: block;
-padding: 12px 60px 12px 12px;
-transition: all 1.5s ease-in-out;
+.checkboxremove:checked+.checkbox>.tick {
+    opacity: 1;
 }
+
+.checkboxremove:checked+.checkbox {
+    border-color: #66CDAA;
+}
+
+.checkboxremove:checked~.item {
+    text-decoration: line-through;
+    color: #bdc3c7;
+    transition: all 1.5s ease-in-out;
+}
+
+.checkboxremove {
+    opacity: 0;
+    position: absolute;
+    width: 0;
+    height: 0;
+}
+
+.item {
+    margin-left: 45px;
+    display: block;
+    padding: 12px 60px 12px 12px;
+    transition: all 1.5s ease-in-out;
+}
+
 .tasks .item.edit {
     color: #000;
     text-decoration: none;
 }
+
 .item-close {
     position: absolute;
     right: 10px;
     border: none;
     background: none;
     font-size: 30px;
-    top:0;
+    top: 0;
     bottom: 0;
     color: #b05b5f;
     cursor: pointer;
     outline: none;
     visibility: hidden;
     opacity: 0.7;
-  }
-  .view:hover .item-close {
-      visibility: visible;
-    }
-
-button.item-close:hover {
-color: #c0392b;
-transition: all 1.5s;
-opacity: 1;
 }
 
-.edit{
-position: relative;
-display: block;
-outline: none;
-border: 1px solid #999;
-box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
-box-sizing: border-box;
-background-color: white;
-z-index: 2;
-transition: all 1s ease-in-out;
+.view:hover .item-close {
+    visibility: visible;
+}
+
+button.item-close:hover {
+    color: #c0392b;
+    transition: all 1.5s;
+    opacity: 1;
+}
+
+.edit {
+    position: relative;
+    display: block;
+    outline: none;
+    border: 1px solid #999;
+    box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
+    box-sizing: border-box;
+    background-color: white;
+    z-index: 2;
+    transition: all 1s ease-in-out;
 }
 
 
@@ -243,7 +279,7 @@ transition: all 1s ease-in-out;
     display: inline-block;
 }
 
-.footer-link,.footer-btn {
+.footer-link, .footer-btn {
     text-decoration: none;
     background: none;
     border: none;
@@ -256,33 +292,39 @@ transition: all 1s ease-in-out;
     cursor: pointer;
 }
 
-.footer-link.active,.footer-link:hover {
+.footer-link.active, .footer-link:hover {
     border-color: #ead7d8;
     transition: all 0.3s ease;
 }
-.footer-btn:focus{
-  text-decoration:underline;
+
+.footer-btn:focus {
+    text-decoration: underline;
 }
+
+
 /* Section-footer */
 
+
 /* Snackbar */
-h2{
-min-width: 250px;
-margin-left: -170px;
- background-color:rgba(51, 51, 51, 0.7);
-text-align: center;
-color: #F0F8FF;
-padding: 16px;
-font-weight: 300;
-position: fixed;
-z-index: 1;
-left: 50%;
-bottom: 30px;
-font-size: 18px;
-box-shadow: 0px 2px 6px rgba(0, 0, 0, 1);
-border-radius: 3px;
+
+h2 {
+    min-width: 250px;
+    margin-left: -170px;
+    background-color: rgba(51, 51, 51, 0.7);
+    text-align: center;
+    color: #F0F8FF;
+    padding: 16px;
+    font-weight: 300;
+    position: fixed;
+    z-index: 2;
+    left: 50%;
+    bottom: 30px;
+    font-size: 18px;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 1);
+    border-radius: 3px;
 }
-.Snackbar-error{
-  color:#9b2d30;
-  font-size: 19px;
+
+.Snackbar-error {
+    color: #9b2d30;
+    font-size: 19px;
 }
